errores en instancia de clases agregados

--- a/Compilador_MiniCSharp/Compilador_MiniCSharp.csproj
+++ b/Compilador_MiniCSharp/Compilador_MiniCSharp.csproj
@@ -8,4 +8,10 @@
     <RootNamespace>MiniC</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="LibExpressionParser">
+      <HintPath>..\..\LibExpressionParser.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
